# cyphras

./: .gitignore  LICENSE  NOTICE  README.md
circuits/: README.md  package-lock.json  package.json
circuits/keys/: verification_key.json
circuits/lib/: keypair.circom  merkleProof.circom
circuits/lib/poseidon2/: poseidon2_perm.circom
circuits/parity/: poseidon2_1_main.circom  poseidon2_2_main.circom  poseidon2_3_main.circom  poseidon2_compress_main.circom
circuits/scripts/: setup.sh
circuits/src/: transaction.circom
circuits/tests/: assertltl_test.circom  reduce_test.circom
contracts/: Cargo.toml  README.md  deployments.testnet.json
contracts/poseidon2/: ATTRIBUTION.md  Cargo.toml
contracts/poseidon2/src/: constants.rs  lib.rs  parity_test.rs  poseidon2.rs
contracts/scripts/: deploy.sh
contracts/types/: Cargo.toml
contracts/types/src/: lib.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  merkle.rs  nullifier.rs  test.rs  tx.rs
contracts/vault/test_snapshots/test/: e2e_fixture_values.1.json  e2e_withdraw_fixture_values.1.json  merkle_insert_advances_root_history.1.json  nullifier_double_spend_is_rejected.1.json  registration_is_versioned_and_authorized.1.json
contracts/verifier/: Cargo.toml  build.rs
contracts/verifier/src/: lib.rs
extension/: .gitignore  .prettierignore  .prettierrc  README.md  build.sh  manifest.json  package-lock.json  package.json
extension/.github/: PULL_REQUEST_TEMPLATE.md
extension/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
extension/src/app/: approval.html  offscreen.html  onboarding.html  tsconfig.app.json  vite.bridge.config.ts  (+4 more)
offchain/: .env.example  README.md  docker-compose.yml
offchain/db/: schema.sql
offchain/deploy/: nginx.private.cyphras.com.conf
offchain/indexer/: Dockerfile  package-lock.json  package.json
offchain/relayer/: Dockerfile  package-lock.json  package.json
(+155 files in other folders)
