[workspace]
resolver = "2"
members = [
  "types",
  "poseidon2",
  "verifier",
  "vault",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
soroban-sdk = { version = "26", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
codegen-units = 1
lto = true
strip = "symbols"
