[package]
name = "poseidon2"
version = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["hazmat"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["hazmat", "testutils"] }
